--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,12 @@ dependencies {
     implementation wpi.deps.wpilib()
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
 
-
     implementation wpi.deps.vendor.java()
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+
+    compile "org.apache.commons:commons-csv:1.5"
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+
 
     testImplementation 'junit:junit:4.12'
 
